--- a/index.html
+++ b/index.html
@@ -24,33 +24,29 @@
           <img src="img/logo.svg" alt="Logo Blogr" />
         </div>
 
-        <ul class="header__list">
-          <li class="header__item">
-            <a href="#" class="header__link"
-              >Product
-              <img
-                src="img/icon-arrow-light.svg"
-                alt="arrow icon"
-                class="header__link-arrow"
-            /></a>
+        <ul class="header__menu">
+          <li class="header__menu-item">
+            <a href="#" class="header__link">Product </a>
           </li>
-          <li class="header__item">
-            <a href="#" class="header__link"
-              >Company
-              <img
-                src="img/icon-arrow-light.svg"
-                alt="arrow icon"
-                class="header__link-arrow"
-            /></a>
+          <li class="header__menu-item">
+            <a href="#" class="header__link">Company </a>
           </li>
-          <li class="header__item">
-            <a href="#" class="header__link"
-              >Connect
-              <img
-                src="img/icon-arrow-light.svg"
-                alt="arrow icon"
-                class="header__link-arrow"
-            /></a>
+          <li class="header__menu-item">
+            <a href="#" class="header__link">Connect </a>
+
+            <div class="header__dropdown-content">
+              <a href="#" class="header__dropdown-link">Contact</a>
+              <a href="#" class="header__dropdown-link">Newsletter</a>
+              <a href="#" class="header__dropdown-link">LinkedIn</a>
+            </div>
+
+            <!-- <ul class="header__dropdown-content">
+              <li class="header__dropdown-item">
+                <a href="#" class="header__dropdown-link">Contact</a>
+                <a href="#" class="header__dropdown-link">Newsletter</a>
+                <a href="#" class="header__dropdown-link">LinkedIn</a>
+              </li>
+            </ul> -->
           </li>
         </ul>
 
