--- a/index.html
+++ b/index.html
@@ -71,7 +71,44 @@
       </div>
     </header>
     <main>
-      <section class="content"></section>
+      <section class="section-features">
+        <div class="u-center-text u-margin-top-extra u-margin-bottom-big">
+          <h2 class="heading-secondary">Designed for the future</h2>
+        </div>
+        <div class="section-features__feature-container">
+          <div class="section-features__feature">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Introducing an extensible editor
+            </h3>
+            <p>
+              Blogr features an exceedingly intuitive interface which lets you
+              focus on one thing: creating content. The editor supports
+              management of multiple blogs and allows easy manipulation of
+              embeds such as images, videos, and Markdown. Extensibility with
+              plugins and themes provide easy ways to add functionality or
+              change the looks of a blog.
+            </p>
+          </div>
+
+          <div class="section-features__feature u-margin-top-big">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Robust content management
+            </h3>
+            <p>
+              Flexible content management enables users to easily move through
+              posts. Increase the usability of your blog by adding customized
+              categories, sections, format, or flow. With this functionality,
+              you’re in full control.
+            </p>
+          </div>
+        </div>
+
+        <img
+          class="section-features__image"
+          src="/img/illustration-editor-desktop.svg"
+          alt=""
+        />
+      </section>
       <section class="hilight"></section>
       <section class="content"></section>
     </main>
