--- a/index.html
+++ b/index.html
@@ -109,7 +109,26 @@
           alt=""
         />
       </section>
-      <section class="hilight"></section>
+      <section class="section-feature-hilight u-margin-top-extra">
+        <img
+          class="section-feature__image-hilight"
+          src="/img/illustration-phones.svg"
+          alt=""
+        />
+        <div class="section-feature-hilight__hilight-container">
+          <div class="section-feature-hilight__feature">
+            <h3 class="heading-tertiary--hilight u-margin-bottom-small">
+              State of the Art Infrastructure
+            </h3>
+            <p>
+              With reliability and speed in mind, worldwide data centers provide
+              the backbone for ultra-fast connectivity. This ensures your site
+              will load instantly, no matter where your readers are, keeping
+              your site competitive.
+            </p>
+          </div>
+        </div>
+      </section>
       <section class="content"></section>
     </main>
     <footer></footer>
