add last section and footer

--- a/index.html
+++ b/index.html
@@ -39,14 +39,6 @@
               <a href="#" class="header__dropdown-link">Newsletter</a>
               <a href="#" class="header__dropdown-link">LinkedIn</a>
             </div>
-
-            <!-- <ul class="header__dropdown-content">
-              <li class="header__dropdown-item">
-                <a href="#" class="header__dropdown-link">Contact</a>
-                <a href="#" class="header__dropdown-link">Newsletter</a>
-                <a href="#" class="header__dropdown-link">LinkedIn</a>
-              </li>
-            </ul> -->
           </li>
         </ul>
 
@@ -115,7 +107,9 @@
           src="/img/illustration-phones.svg"
           alt=""
         />
-        <div class="section-feature-hilight__hilight-container">
+        <div
+          class="section-feature-hilight__hilight-container u-margin-bottom-big"
+        >
           <div class="section-feature-hilight__feature">
             <h3 class="heading-tertiary--hilight u-margin-bottom-small">
               State of the Art Infrastructure
@@ -129,8 +123,74 @@
           </div>
         </div>
       </section>
-      <section class="content"></section>
+      <section class="section-features u-margin-top-extra">
+        <img
+          class="section-features__image--left"
+          src="/img/illustration-laptop-desktop.svg"
+          alt=""
+        />
+        <div class="section-features__feature-container--right">
+          <div class="section-features__feature">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Free, open, simple
+            </h3>
+            <p>
+              Blogr is a free and open source application backed by a large
+              community of helpful developers. It supports features such as code
+              syntax highlighting, RSS feeds, social media integration,
+              third-party commenting tools, and works seamlessly with Google
+              Analytics. The architecture is clean and is relatively easy to
+              learn.
+            </p>
+          </div>
+
+          <div class="section-features__feature u-margin-top-big">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Powerful tooling
+            </h3>
+            <p>
+              Batteries included. We built a simple and straightforward CLI tool
+              that makes customization and deployment a breeze, but capable of
+              producing even the most complicated sites.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="footer u-margin-top-big">
+      <div class="footer__logo">
+        <img src="/img/logo.svg" alt="logo" />
+      </div>
+      <div class="footer__menu-container">
+        <div class="footer__menu">
+          <h4 class="footer__menu-title">Product</h4>
+          <ul class="footer__menu-list">
+            <li class="footer__menu-item"><a href="#">Overview</a></li>
+            <li class="footer__menu-item"><a href="#">Pricing</a></li>
+            <li class="footer__menu-item"><a href="#">Marketplace</a></li>
+            <li class="footer__menu-item"><a href="#">Integrations</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__menu">
+          <h4 class="footer__menu-title">Company</h4>
+          <ul class="footer__menu-list">
+            <li class="footer__menu-item"><a href="#">About</a></li>
+            <li class="footer__menu-item"><a href="#">Team</a></li>
+            <li class="footer__menu-item"><a href="#">Blog</a></li>
+            <li class="footer__menu-item"><a href="#">Careers</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__menu">
+          <h4 class="footer__menu-title">Connect</h4>
+          <ul class="footer__menu-list">
+            <li class="footer__menu-item"><a href="#">Contact</a></li>
+            <li class="footer__menu-item"><a href="#">Newsletter</a></li>
+            <li class="footer__menu-item"><a href="#">LinkedIn</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
